# mthds-plugins

./: CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin-base.json  plugin.json
.claude/skills/bump-mthds-version/: SKILL.md
.claude/skills/release/: SKILL.md
.codex-plugin/: plugin-base.json
.github/workflows/: checks.yml
docs/: build-targets.md  codex-vs-claude-hooks.md
hooks/: validate-mthds.sh
mthds-codex/.codex-plugin/: plugin.json
mthds-codex/hooks/: codex-validate-mthds-stop.sh  codex-validate-mthds.sh
mthds-codex/skills/mthds-build/: SKILL.md
mthds-codex/skills/mthds-check/: SKILL.md
mthds-codex/skills/mthds-edit/: SKILL.md
mthds-codex/skills/mthds-explain/: SKILL.md
mthds-codex/skills/mthds-fix/: SKILL.md
mthds-codex/skills/mthds-inputs/: SKILL.md
mthds-codex/skills/mthds-install/: SKILL.md
mthds-codex/skills/mthds-pkg/: SKILL.md
mthds-codex/skills/mthds-publish/: SKILL.md
mthds-codex/skills/mthds-run/: SKILL.md
mthds-codex/skills/mthds-runner-setup/: SKILL.md
mthds-codex/skills/mthds-share/: SKILL.md
mthds-codex/skills/mthds-upgrade/: SKILL.md
mthds-codex/skills/shared/: frontmatter.md  mthds-agent-guide.md  preamble.md  upgrade-flow.md
mthds-dev/.claude-plugin/: plugin.json
mthds-dev/hooks/: hooks.json  session-start.sh  validate-mthds.sh
mthds-dev/skills/mthds-build/: SKILL.md
mthds-dev/skills/mthds-check/: SKILL.md
mthds-dev/skills/mthds-edit/: SKILL.md
mthds-dev/skills/mthds-explain/: SKILL.md
mthds-dev/skills/mthds-fix/: SKILL.md
mthds-dev/skills/mthds-inputs/: SKILL.md
mthds-dev/skills/mthds-install/: SKILL.md
mthds-dev/skills/mthds-pipelex-setup/: SKILL.md
mthds-dev/skills/mthds-pkg/: SKILL.md
mthds-dev/skills/mthds-publish/: SKILL.md
mthds-dev/skills/mthds-run/: SKILL.md
mthds-dev/skills/mthds-runner-setup/: SKILL.md
mthds-dev/skills/mthds-share/: SKILL.md
mthds-dev/skills/mthds-upgrade/: SKILL.md
mthds-dev/skills/shared/: error-handling.md  frontmatter.md  mthds-agent-guide.md  mthds-reference.md  native-content-types.md  preamble.md  upgrade-flow.md
mthds/.claude-plugin/: plugin.json
mthds/hooks/: session-start.sh  validate-mthds.sh
mthds/skills/mthds-build/: SKILL.md  references
mthds/skills/mthds-check/: SKILL.md
mthds/skills/mthds-edit/: SKILL.md  references
mthds/skills/mthds-explain/: SKILL.md
mthds/skills/mthds-fix/: SKILL.md
mthds/skills/mthds-inputs/: SKILL.md
mthds/skills/mthds-install/: SKILL.md
mthds/skills/mthds-pipelex-setup/: SKILL.md
mthds/skills/mthds-pkg/: SKILL.md
mthds/skills/mthds-publish/: SKILL.md
mthds/skills/mthds-run/: SKILL.md
mthds/skills/mthds-runner-setup/: SKILL.md
mthds/skills/mthds-share/: SKILL.md
mthds/skills/mthds-upgrade/: SKILL.md
mthds/skills/shared/: error-handling.md  frontmatter.md  mthds-agent-guide.md  preamble.md
packaging/: codex-marketplace.json
scripts/: CLAUDE.md  check.py  gen_skill_docs.py
skills/mthds-build/: SKILL.md  SKILL.md.j2
skills/mthds-build/references/: build-phases.md  manual-build-phases.md  model-references.md
skills/mthds-check/: SKILL.md  SKILL.md.j2
skills/mthds-edit/: SKILL.md  SKILL.md.j2
skills/mthds-explain/: SKILL.md  SKILL.md.j2
skills/mthds-fix/: SKILL.md  SKILL.md.j2
skills/mthds-inputs/: SKILL.md  SKILL.md.j2
skills/mthds-install/: SKILL.md  SKILL.md.j2
skills/mthds-pipelex-setup/: SKILL.md  SKILL.md.j2
skills/mthds-pkg/: SKILL.md  SKILL.md.j2
skills/mthds-publish/: SKILL.md  SKILL.md.j2
skills/mthds-run/: SKILL.md  SKILL.md.j2
skills/mthds-share/: SKILL.md  SKILL.md.j2
skills/mthds-upgrade/: SKILL.md  SKILL.md.j2
skills/shared/: error-handling.md  frontmatter.md  mthds-agent-guide.md  mthds-agent-guide.md.j2  mthds-reference.md  preamble.md  upgrade-flow.md
targets/: codex.toml  defaults.toml  dev.toml  prod.toml
templates/hooks/: codex-hooks.json.j2  codex-validate-mthds-stop.sh.j2  codex-validate-mthds.sh.j2  hooks.json.j2  session-start.sh.j2  validate-mthds.sh.j2
templates/skills/mthds-build/: SKILL.md.j2
templates/skills/mthds-check/: SKILL.md.j2
templates/skills/mthds-edit/: SKILL.md.j2
templates/skills/mthds-explain/: SKILL.md.j2
templates/skills/mthds-fix/: SKILL.md.j2
tests/integration/: test_hook_validate_mthds.py
tests/unit/: test_check.py  test_gen_skill_docs.py  test_hook_json_logic.py  test_install_codex_version_ge.py
(+16 files in other folders)
